Add a11y and action logger and console addons
Note currently the a11y plugin is bugged and doesn't work (this is an
upstream problem)

--- a/package.json
+++ b/package.json
@@ -87,9 +87,12 @@
     "@shopify/js-uploader": "github:shopify/js-uploader",
     "@shopify/react-serialize": "^1.0.6",
     "@shopify/sewing-kit": "0.64.2",
-    "@storybook/addon-notes": "^4.1.1",
-    "@storybook/addons": "^4.1.1",
-    "@storybook/react": "^4.1.1",
+    "@storybook/addon-a11y": "^4.1.2",
+    "@storybook/addon-actions": "^4.1.2",
+    "@storybook/addon-console": "^1.1.0",
+    "@storybook/addon-notes": "^4.1.2",
+    "@storybook/addons": "^4.1.2",
+    "@storybook/react": "^4.1.2",
     "@types/enzyme": "^3.1.14",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/lodash": "^4.14.108",
