--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@storybook/addon-actions": "^4.1.2",
     "@storybook/addon-console": "^1.1.0",
     "@storybook/addon-notes": "^4.1.2",
+    "@storybook/addon-options": "^4.1.2",
     "@storybook/addons": "^4.1.2",
     "@storybook/react": "^4.1.2",
     "@types/enzyme": "^3.1.14",
