--- a/package.json
+++ b/package.json
@@ -57,13 +57,14 @@
     "postpublish": "in-publish && npm-run-all cdn open-styleguide-pr || :",
     "dev": "yarn run copy-polaris-tokens && webpack-dev-server --config ./playground/webpack.config.js --content-base ./playground/ --hot --inline",
     "dev:host": "yarn run copy-polaris-tokens && webpack-dev-server --config ./playground/webpack.config.js --content-base ./playground/ --hot --inline --host $(ipconfig getifaddr en0)",
-    "test:percy": "node ./scripts/percy-snapshots.js",
+    "test:percy": "yarn run storybook:build && percy-storybook --build_dir build/storybook-static",
     "test:a11y": "node ./scripts/pa11y.js",
-    "start": "node ./playground/server.js",
-    "heroku-postbuild": "yarn run copy-polaris-tokens && webpack --config ./playground/webpack.config.js --env.production",
+    "start": "start-storybook -p ${PORT} --ci --quiet",
+    "heroku-postbuild": "yarn run copy-polaris-tokens",
     "readme-update-version": "babel-node ./scripts/readme-update-version",
     "version": "yarn run readme-update-version",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "storybook:build": "yarn run copy-polaris-tokens && build-storybook -o build/storybook-static"
   },
   "stylelint": {
     "extends": [
@@ -82,6 +83,7 @@
     }
   },
   "devDependencies": {
+    "@percy-io/percy-storybook": "^2.1.0",
     "@percy/puppeteer": "^0.4.0",
     "@shopify/jest-dom-mocks": "^2.1.1",
     "@shopify/js-uploader": "github:shopify/js-uploader",
