Update pa11y script to run over storybook URLs
The shitlist is broken as it isn't mapping URLs properly but that's been
low-key broken for a few weeks anyway thanks to the url changes when
unifying tophat and playground.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,7 @@ jobs:
           key: v3-npm-deps-{{ arch }}-{{ checksum "yarn.lock" }}-{{ checksum ".yarnclean" }}
           paths:
             - node_modules
-      - run: yarn run heroku-postbuild
-      - run: yarn start & sleep 20; yarn run test:a11y
+      - run: yarn run test:a11y
 
 workflows:
   version: 2
