--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "test:ci": "yarn test --coverage",
     "check": "npm-run-all lint ts test",
     "check:ci": "npm-run-all lint ts test:ci",
-    "clean": "rimraf build build-esnext esnext styles types docs \"build-intermediate\" \"index.*\" \"./src/styles/polaris-tokens\" \"./playground/build\" \"styles.{css,scss}\"",
-    "clean:build": "rimraf \"build/!(cache|coverage)\" build-esnext esnext styles types docs \"build-intermediate\" \"index.*\" \"./src/styles/polaris-tokens\" \"./playground/build\" \"styles.{css,scss}\"",
+    "clean": "rimraf build build-esnext esnext styles types docs \"build-intermediate\" \"index.*\" \"./src/styles/polaris-tokens\" \"styles.{css,scss}\"",
+    "clean:build": "rimraf \"build/!(cache|coverage)\" build-esnext esnext styles types docs \"build-intermediate\" \"index.*\" \"./src/styles/polaris-tokens\" \"styles.{css,scss}\"",
     "optimize": "node ./scripts/optimize.js",
     "prebuild": "npm-run-all clean:build optimize copy-polaris-tokens",
     "build": "babel-node ./scripts/build.js",
@@ -55,8 +55,7 @@
     "copy-polaris-tokens": "rimraf ./src/styles/polaris-tokens && shx cp -r ./node_modules/@shopify/polaris-tokens/dist ./src/styles/polaris-tokens",
     "prepublish": "in-publish && yarn run build || :",
     "postpublish": "in-publish && npm-run-all cdn open-styleguide-pr || :",
-    "dev": "yarn run copy-polaris-tokens && webpack-dev-server --config ./playground/webpack.config.js --content-base ./playground/ --hot --inline",
-    "dev:host": "yarn run copy-polaris-tokens && webpack-dev-server --config ./playground/webpack.config.js --content-base ./playground/ --hot --inline --host $(ipconfig getifaddr en0)",
+    "dev": "npm-run-all copy-polaris-tokens storybook",
     "test:percy": "yarn run storybook:build && percy-storybook --build_dir build/storybook/static",
     "test:a11y": "yarn run storybook:build && node ./scripts/pa11y.js",
     "start": "start-storybook -p ${PORT} --ci --quiet",
@@ -84,10 +83,8 @@
   },
   "devDependencies": {
     "@percy-io/percy-storybook": "^2.1.0",
-    "@percy/puppeteer": "^0.4.0",
     "@shopify/jest-dom-mocks": "^2.1.1",
     "@shopify/js-uploader": "github:shopify/js-uploader",
-    "@shopify/react-serialize": "^1.0.6",
     "@shopify/sewing-kit": "0.64.2",
     "@storybook/addon-a11y": "^4.1.2",
     "@storybook/addon-actions": "^4.1.2",
@@ -101,11 +98,7 @@
     "@types/lodash": "^4.14.108",
     "@types/lodash-decorators": "^4.0.0",
     "@types/node": "^8.10.17",
-    "@types/react-helmet": "^5.0.6",
-    "@types/react-hot-loader": "^3.0.6",
-    "@types/react-router-dom": "^4.2.7",
     "@types/rollup": "0.51.4",
-    "@types/storybook__react": "^4.0.0",
     "archiver": "^2.1.0",
     "aws-sdk": "^2.58.0",
     "babel-cli": "^6.26.0",
@@ -120,13 +113,11 @@
     "cssnano": "^3.10.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "fs-extra": "^4.0.2",
     "generic-names": "^1.0.2",
     "glob": "^7.1.2",
     "gray-matter": "^4.0.1",
-    "identity-obj-proxy": "^3.0.0",
     "in-publish": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.10.0",
@@ -143,8 +134,6 @@
     "puppeteer": "^1.5.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-helmet": "^5.2.0",
-    "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.3.1",
     "rimraf": "^2.6.1",
     "rollup": "^0.50.0",
@@ -158,8 +147,6 @@
     "shx": "^0.2.2",
     "svgo": "^0.7.2",
     "typescript": "~3.1.6",
-    "webpack": "~4.25.1",
-    "webpack-cli": "3.1.0",
     "yargs": "^12.0.1"
   },
   "peerDependencies": {
